Fix processing when ellipse fitting doesn't work
Instead of completely failing, we now simply interrupt the next steps.
This allows processing with ImageMath using raw, reconstructed images.

Fixes #54